# svgreplicate

./: .gitignore  README.md  config.json  pyproject.toml  test.py
example/: config.json  replicas.json
scripts/: format.ps1  test.ps1
svgreplicate/: __main__.py  svghandler.py
svgreplicator/: __main__.py  svgreplicator.py
tests/: test_svghandler.py
